--- a/app/src/main/res/layout/activity_comp_details.xml
+++ b/app/src/main/res/layout/activity_comp_details.xml
@@ -20,7 +20,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_comp_details"
-        android:id="@+id/include" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/content_comp_details" />
 
 </android.support.design.widget.CoordinatorLayout>
