--- a/app/src/main/res/layout/activity_comp_list.xml
+++ b/app/src/main/res/layout/activity_comp_list.xml
@@ -20,7 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_comp_list"
-        android:id="@+id/include" />
+    <include layout="@layout/content_comp_list" />
 
 </android.support.design.widget.CoordinatorLayout>
