--- a/app/src/main/res/layout/content_comp_list.xml
+++ b/app/src/main/res/layout/content_comp_list.xml
@@ -5,6 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="ru.goryachev.testjobs.compdb.screens.CompListActivity"
     tools:showIn="@layout/activity_comp_list">
